# Szaleni-bibliotekarze

./: .gitignore  .gitmodules  README.md  Złożoność analiza.md  dockerGenerator.sh  pseudoKod.md
bibliotekarze/: CMakeLists.txt
bibliotekarze/src/: main.cpp
bibliotekarze/src/communication/: Communication.h  MPIHandler.cpp  MPIHandler.h
bibliotekarze/src/domain/: CommunicationThread.cpp  CommunicationThread.h  Helpers.h  Librarian.cpp  Librarian.h
